--- a/README
+++ b/README
@@ -14,6 +14,7 @@ Day 2-3.
 - Run test suite via py.test.
 - Collect and maximize code coverage.
 - Validate pep8/pylint.
+- Use logging with various verbosity levels.
 - Use tox for automation (tests, coverage, lint).
 - Generalize to 3D case.
 - Optimize memory usage -> O(1)
